; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_should_lookahead.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_should_lookahead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_opt = type { %struct.grep_pat*, i64, i64 }
%struct.grep_pat = type { i64, %struct.grep_pat* }

@GREP_PATTERN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grep_opt*)* @should_lookahead to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @should_lookahead(%struct.grep_opt* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.grep_opt*, align 8
  %4 = alloca %struct.grep_pat*, align 8
  store %struct.grep_opt* %0, %struct.grep_opt** %3, align 8
  %5 = load %struct.grep_opt*, %struct.grep_opt** %3, align 8
  %6 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %5, i32 0, i32 2
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %36

10:                                               ; preds = %1
  %11 = load %struct.grep_opt*, %struct.grep_opt** %3, align 8
  %12 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %36

16:                                               ; preds = %10
  %17 = load %struct.grep_opt*, %struct.grep_opt** %3, align 8
  %18 = getelementptr inbounds %struct.grep_opt, %struct.grep_opt* %17, i32 0, i32 0
  %19 = load %struct.grep_pat*, %struct.grep_pat** %18, align 8
  store %struct.grep_pat* %19, %struct.grep_pat** %4, align 8
  br label %20

20:                                               ; preds = %31, %16
  %21 = load %struct.grep_pat*, %struct.grep_pat** %4, align 8
  %22 = icmp ne %struct.grep_pat* %21, null
  br i1 %22, label %23, label %35

23:                                               ; preds = %20
  %24 = load %struct.grep_pat*, %struct.grep_pat** %4, align 8
  %25 = getelementptr inbounds %struct.grep_pat, %struct.grep_pat* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @GREP_PATTERN, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  store i32 0, i32* %2, align 4
  br label %36

30:                                               ; preds = %23
  br label %31

31:                                               ; preds = %30
  %32 = load %struct.grep_pat*, %struct.grep_pat** %4, align 8
  %33 = getelementptr inbounds %struct.grep_pat, %struct.grep_pat* %32, i32 0, i32 1
  %34 = load %struct.grep_pat*, %struct.grep_pat** %33, align 8
  store %struct.grep_pat* %34, %struct.grep_pat** %4, align 8
  br label %20

35:                                               ; preds = %20
  store i32 1, i32* %2, align 4
  br label %36

36:                                               ; preds = %35, %29, %15, %9
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
